Replaced A,P.T Builders Website.html with index.html

--- a/A,P.T Builders Website.html/gallery.html
+++ b/A,P.T Builders Website.html/gallery.html
@@ -9,7 +9,7 @@
 <body>
 
     <header class="header-gallery">
-        <a href="A.P.T.Builders Website.html">
+        <a href="index.html">
             <img src="images/aptlogo.png" alt="Logo" class="header-logo">
         </a>
 
@@ -20,7 +20,7 @@
                 ☰
             </button>
             <div class="menu-content">
-                <a href="A.P.T.Builders Website.html">Home</a>
+                <a href="index.html">Home</a>
                 <a href="gallery.html">Gallery</a>
                 <a href="services.html">Services</a>
                 <a href="contact.html">Contact Us</a>
