--- a/A,P.T Builders Website.html/contact.html
+++ b/A,P.T Builders Website.html/contact.html
@@ -9,7 +9,7 @@
 <body>
 
         <header class="header-gallery">
-            <a href="A.P.T.Builders Website.html">
+            <a href="index.html">
                 <img src="images/aptlogo.png" alt="Logo" class="header-logo">
             </a>
     
@@ -22,7 +22,7 @@
                  ☰
              </button>
              <div class="menu-content">
-                 <a href="A.P.T.Builders Website.html">Home</a>
+                 <a href="index.html">Home</a>
                  <a href="gallery.html">Gallery</a>
                  <a href="services.html">Services</a>
                  <a href="contact.html">Contact Us</a>
@@ -54,7 +54,7 @@
             <button type="submit">Send Message</button>
         </form>
 
-        <a href="A.P.T.Builders Website.html">
+        <a href="index.html">
             <button>Back to Home</button>
         </a>
     </div>
