Updated gallery layout

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         <header>
             <a href="index.html">
-                <img src="images/aptlogo.png" alt="Logo" class="header-logo">  
+                <img src="images/aptlogo.png" alt="Logo" class="main-logo">  
             </a>
                 
                     <h1 class="head-title">A.P.T.Builders</h1>
