Updated header layout and made button responsive

--- a/gallery.html
+++ b/gallery.html
@@ -65,11 +65,17 @@
         <a href="gallery-page6.html" class="gallery-box">
             <img src="images/image6.jpg" alt="Landscaping-image">
             <div class="overlay">Landscaping</div>
+         </a>
+
+           <!-- Image Box 7 -->
+        <a href="gallery-page7.html" class="gallery-box">
+            <img src="images/image7.jpg" alt="Painting-&-Decorating-image">
+            <div class="overlay">Painting & Decorating</div>
         </a>
 
-        <!-- Image Box 7 -->
-        <a href="gallery-page7.html" class="gallery-box">
-            <img src="images/image7.jpg" alt="Other-image">
+        <!-- Image Box 8 -->
+        <a href="gallery-page8.html" class="gallery-box">
+            <img src="images/image8.jpg" alt="Other-image">
             <div class="overlay">Other</div>
         </a>
     </div>
