--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <div class="slider-container">
                    
                     <div class="slider" id="projectSlider">
-                        <img src="images/Swimming Pool Area (2).jpeg" alt="Image 4">
+                        <img src="images/main recent swimming pool image.jpg" alt="Image 4">
                         <img src="images/Swimming Pool Area (5).jpeg" alt="Image 1">
                         <img src="images/Swimming Pool Area (3).jpeg" alt="Image 2">
                         <img src="images/Swimming Pool Area (1).jpeg" alt="Image 3">
