added images to recent project slider

--- a/gallery-page8.html
+++ b/gallery-page8.html
@@ -53,10 +53,10 @@
         <!-- Image 2 -->
         <input type="checkbox" id="img2" class="lightbox-toggle">
         <label for="img2" class="thumbnail">
-          <img src="images/image2.jpg" alt="Gallery Image 2">
+          <img src="images/roof.samplepic - Copy.jpg" alt="Gallery Image 2">
         </label>
         <label for="img2" class="lightbox">
-          <img src="images/image2.jpg" alt="Enlarged Image">
+          <img src="images/roof.samplepic - Copy.jpg" alt="Enlarged Image">
         </label>
 
          <!-- Image 3 -->
