edited gallery pic sizes and footer

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                 <a href="contact.html" class="project-button">Contact Us</a>
               </div>
               
-
+<div>
 <footer class="site-footer">
     <div class="footer-content">
       <p><a href="tel:07794083532">&#9742; Alan - 07794 083532</a></p>
@@ -204,6 +204,7 @@
       <p>&copy; 2025 A.P.T Builders. All rights reserved.</p>
     </div>
   </footer>
+</div>
 
   
  
