--- a/gallery-page7.html
+++ b/gallery-page7.html
@@ -8,25 +8,27 @@
 </head>
 <body>
 
+  
   <header>
-    <div class="header-top">
-      <a href="index.html">
-        <img src="images/aptlogo.png" alt="Logo" class="header-logo">
-      </a>
-      <h1 class="header-title">Painting & Decorating</h1>
+    <div class="header">
+    <a href="index.html">
+    <img class="header-logo" src="images/aptlogo.png">
+    </a>   
+
+    <h1 class="head-title">A.P.T Builders</h1>
+    <nav class="burger-nav">
+        <button class="burger-toggle" onclick="toggleMenu()">☰</button>
+        <div class="burger-menu" id="burgerMenu">
+          <a href="index.html">Home</a>
+          <a href="gallery.html">Gallery</a>
+          <a href="services.html">Services</a>
+          <a href="contact.html">Contact Us</a>
+        </div>
+      </nav>
       
     </div>
-  
-    <div class="menu">
-      <button class="menu-toggle">☰</button>
-      <div class="menu-content">
-        <a href="index.html">Home</a>
-        <a href="gallery.html">Gallery</a>
-        <a href="services.html">Services</a>
-        <a href="contact.html">Contact Us</a>
-      </div>
-    </div>
   </header>
+
 
   <section class="gallery-button-section">
     <a href="gallery.html">
@@ -65,6 +67,14 @@
 
 
       </div>
+
+      <script>
+        function toggleMenu() {
+          const menu = document.getElementById("burgerMenu");
+          menu.style.display = (menu.style.display === "flex") ? "none" : "flex";
+        }
+      </script>
+      
 
 </body>
 </html>
