--- a/gallery.html
+++ b/gallery.html
@@ -8,25 +8,25 @@
 </head>
 <body>
 
-    <header class="header-gallery">
+    <header>
+        <div class="header">
         <a href="index.html">
-            <img src="images/aptlogo.png" alt="Logo" class="header-logo">
-        </a>
+        <img class="header-logo" src="images/aptlogo.png">
+        </a>   
 
-        <h1 class="gallery-title">Gallery</h1>
-
-        <div class="menu">
-            <button class="menu-toggle">
-                ☰
-            </button>
-            <div class="menu-content">
-                <a href="index.html">Home</a>
-                <a href="gallery.html">Gallery</a>
-                <a href="services.html">Services</a>
-                <a href="contact.html">Contact Us</a>
+        <h1 class="head-title">A.P.T Builders</h1>
+        <nav class="burger-nav">
+            <button class="burger-toggle" onclick="toggleMenu()">☰</button>
+            <div class="burger-menu" id="burgerMenu">
+              <a href="index.html">Home</a>
+              <a href="gallery.html">Gallery</a>
+              <a href="services.html">Services</a>
+              <a href="contact.html">Contact Us</a>
             </div>
+          </nav>
+          
         </div>
-    </header>
+      </header>
 
 
 
@@ -79,6 +79,14 @@
             <div class="overlay">Other</div>
         </a>
     </div>
+
+    <script>
+        function toggleMenu() {
+          const menu = document.getElementById("burgerMenu");
+          menu.style.display = (menu.style.display === "flex") ? "none" : "flex";
+        }
+      </script>
+      
 
 </body>
 </html>
