--- a/gallery-page2.html
+++ b/gallery-page2.html
@@ -15,7 +15,7 @@
     <img class="header-logo" src="images/aptlogo.png">
     </a>   
 
-    <h1 class="head-title">A.P.T Builders</h1>
+    <p class="head-title">A.P.T Builders</p>
     <nav class="burger-nav">
         <button class="burger-toggle" onclick="toggleMenu()">☰</button>
         <div class="burger-menu" id="burgerMenu">
@@ -28,7 +28,6 @@
       
     </div>
   </header>
-
 
 
     <section class="gallery-button-section">
