--- a/gallery.html
+++ b/gallery.html
@@ -13,8 +13,8 @@
         <a href="index.html">
         <img class="header-logo" src="images/aptlogo.png">
         </a>   
-
-        <h1 class="head-title">A.P.T Builders</h1>
+    
+        <p class="head-title">A.P.T Builders</p>
         <nav class="burger-nav">
             <button class="burger-toggle" onclick="toggleMenu()">☰</button>
             <div class="burger-menu" id="burgerMenu">
