--- a/gallery-page3.html
+++ b/gallery-page3.html
@@ -15,30 +15,23 @@
     <img class="header-logo" src="images/aptlogo.png">
     </a>   
 
-    <h1 class="head-title">A.P.T Builders</h1>
-    <nav class="burger-nav"><header>
-      <div class="header">
-      <a href="index.html">
-      <img class="header-logo" src="images/aptlogo.png">
-      </a>   
-  
-      <p class="head-title">A.P.T Builders</p>
-      <nav class="burger-nav">
-          <button class="burger-toggle" onclick="toggleMenu()">☰</button>
-          <div class="burger-menu" id="burgerMenu">
-            <a href="index.html">Home</a>
-            <a href="gallery.html">Gallery</a>
-            <a href="services.html">Services</a>
-            <a href="contact.html">Contact Us</a>
-          </div>
-        </nav>
-        
-      </div>
-    </header>
+    <p class="head-title">Kitchens</p>
+    <nav class="burger-nav">
+        <button class="burger-toggle" onclick="toggleMenu()">☰</button>
+        <div class="burger-menu" id="burgerMenu">
+          <a href="index.html">Home</a>
+          <a href="gallery.html">Gallery</a>
+          <a href="services.html">Services</a>
+          <a href="contact.html">Contact Us</a>
+        </div>
+      </nav>
+      
+    </div>
+  </header>
 
 
     <section class="gallery-button-section">
-      <a href="gallery.html">
+      <a class="gallery-ref-link" href="gallery.html">
         <button class="back-to-gallery-button">Back to Gallery</button>
       </a>
     </section>
@@ -75,6 +68,14 @@
 
 
       </div>
+
+      <footer class="site-footer">
+        <div class="footer-content">
+          <p><a href="tel:07794083532">&#9742; Alan - 07794 083532</a></p>
+          <p><a href="mailto:a.p.t.builders@hotmail.co.uk">&#9993; a.p.t.builders@hotmail.co.uk</a></p>
+          <p>&copy; 2025 A.P.T Builders. All rights reserved.</p>
+        </div>
+      </footer>
 
       <script>
         function toggleMenu() {
