--- a/gallery-page4.html
+++ b/gallery-page4.html
@@ -15,7 +15,7 @@
     <img class="header-logo" src="images/aptlogo.png">
     </a>   
 
-    <p class="head-title">A.P.T Builders</p>
+    <p class="head-title">Brickwork</p>
     <nav class="burger-nav">
         <button class="burger-toggle" onclick="toggleMenu()">☰</button>
         <div class="burger-menu" id="burgerMenu">
@@ -31,7 +31,7 @@
    
     
     <section class="gallery-button-section">
-      <a href="gallery.html">
+      <a class="gallery-ref-link" href="gallery.html">
         <button class="back-to-gallery-button">Back to Gallery</button>
       </a>
     </section>
@@ -67,6 +67,14 @@
 
 
       </div>
+
+      <footer class="site-footer">
+        <div class="footer-content">
+          <p><a href="tel:07794083532">&#9742; Alan - 07794 083532</a></p>
+          <p><a href="mailto:a.p.t.builders@hotmail.co.uk">&#9993; a.p.t.builders@hotmail.co.uk</a></p>
+          <p>&copy; 2025 A.P.T Builders. All rights reserved.</p>
+        </div>
+      </footer>
 
       <script>
         function toggleMenu() {
