--- a/gallery-page8.html
+++ b/gallery-page8.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gallery - Other</title>
+    <title>Gallery - Builds</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
@@ -15,7 +15,7 @@
     <img class="header-logo" src="images/aptlogo.png">
     </a>   
 
-    <p class="head-title">A.P.T Builders</p>
+    <p class="head-title">Builds</p>
     <nav class="burger-nav">
         <button class="burger-toggle" onclick="toggleMenu()">☰</button>
         <div class="burger-menu" id="burgerMenu">
@@ -32,7 +32,7 @@
   
     
   <section class="gallery-button-section">
-    <a href="gallery.html">
+    <a class="gallery-ref-link" href="gallery.html">
       <button class="back-to-gallery-button">Back to Gallery</button>
     </a>
   </section>
@@ -114,6 +114,14 @@
 
 
       </div>
+
+      <footer class="site-footer">
+        <div class="footer-content">
+          <p><a href="tel:07794083532">&#9742; Alan - 07794 083532</a></p>
+          <p><a href="mailto:a.p.t.builders@hotmail.co.uk">&#9993; a.p.t.builders@hotmail.co.uk</a></p>
+          <p>&copy; 2025 A.P.T Builders. All rights reserved.</p>
+        </div>
+      </footer>
 
       <script>
         function toggleMenu() {
