--- a/gallery-page7.html
+++ b/gallery-page7.html
@@ -69,13 +69,16 @@
       </div>
 
       <footer class="site-footer">
-        <div class="footer-content">
-          <p><a href="tel:07794083532">&#9742; Alan - 07794 083532</a></p>
-          <p><a href="mailto:a.p.t.builders@hotmail.co.uk">&#9993; a.p.t.builders@hotmail.co.uk</a></p>
-          <p>&copy; 2025 A.P.T Builders. All rights reserved.</p>
+        <div class="contact-us-container">
+          <span class="contact-info">
+            <a href="tel:07794083532">📞 Alan - 07794083532</a>
+          </span>
+          <span class="contact-info">
+            <a href="mailto:a.p.t.builders@hotmail.co.uk">✉️ a.p.t.builders@hotmail.co.uk</a>
+          </span>
         </div>
       </footer>
-
+      
       <script>
         function toggleMenu() {
           const menu = document.getElementById("burgerMenu");
