gallery images added and service pages added

--- a/gallery-page7.html
+++ b/gallery-page7.html
@@ -43,6 +43,8 @@
     <img src="images/PD Skirting.jpg" alt="image 4" class="lightbox-img">
     <img src="images/PD woodwork full room view.jpg" alt="image 5" class="lightbox-img">
     <img src="images/PD toilet.jpg" alt="image 6" class="lightbox-img">
+    <img src="images/PDtiles.jpg" alt="image 7" class="lightbox-img">
+    <img src="images/PDdoors.jpg" alt="image 8" class="lightbox-img">
     
   </div>
   
