--- a/gallery-page9.html
+++ b/gallery-page9.html
@@ -40,10 +40,7 @@
     
   
   <div class="gallery lightbox-gallery">
-    <img src="images/roof.samplepic - Copy.jpg" alt="Driveway Image 1" class="lightbox-img">
-    <img src="images/roof.samplepic - Copy.jpg" alt="Driveway Image 1" class="lightbox-img">
-    <img src="images/roof.samplepic - Copy.jpg" alt="Driveway Image 1" class="lightbox-img">
-    <img src="images/roof.samplepic - Copy.jpg" alt="Driveway Image 1" class="lightbox-img">
+    <img src="images/choppingboard.jpg" alt="Image 1" class="lightbox-img">
     
   </div>
   
