--- a/gallery.html
+++ b/gallery.html
@@ -45,13 +45,13 @@
 
         <!-- Image Box 3 -->
         <a href="gallery-page3.html" class="gallery-box">
-            <img src="images/image3.jpg" alt="Kitchen-image">
+            <img src="images/kitchen extension_fitting2.jpg" alt="Kitchen-image">
             <div class="overlay">Kitchens</div>
         </a>
 
         <!-- Image Box 4 -->
         <a href="gallery-page4.html" class="gallery-box">
-            <img src="images/image4.jpg" alt="Brickwork-image">
+            <img src="images/brickworkimage.jpg" alt="Brickwork-image">
             <div class="overlay">Birickwork</div>
         </a>
 
@@ -63,7 +63,7 @@
 
         <!-- Image Box 6 -->
         <a href="gallery-page6.html" class="gallery-box">
-            <img src="images/image6.jpg" alt="Landscaping-image">
+            <img src="images/Corner planter.jpg" alt="Landscaping-image">
             <div class="overlay">Landscaping</div>
          </a>
 
@@ -82,7 +82,7 @@
 
         <!-- Image Box 8 -->
         <a href="gallery-page9.html" class="gallery-box">
-            <img src="images/image8.jpg" alt="General-image">
+            <img src="images/choppingboard.jpg" alt="General-image">
             <div class="overlay">General</div>
         </a>
 
