--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <h2 class="about-us-header">About Us</h2>
         <p>Welcome to A.P.T Builders, where quality craftsmanship meets affordability. 
             With 18 years of experience, we have built a strong reputation for delivering exceptional roofing, kitchen and bathroom fittings, 
-            brickwork, landscaping, driveways, and all aspects of general building work.
+            brickwork, landscaping, driveways, painting and decorating, extensions and all aspects of general building work.
         </p>
 
         <p>Our slogan, "Building for the Future," reflects our commitment to providing long lasting, 
