--- a/index.html
+++ b/index.html
@@ -202,10 +202,10 @@
 <footer class="site-footer">
   <div class="contact-us-container">
     <span class="contact-info">
-        <a href="tel:07794083532" target="_blank">📞 Alan - 07794083532</a>
+      <a href="tel:07794083532">📞 Alan - 07794083532</a>
     </span>
     <span class="contact-info">
-        <a href="mailto:a.p.t.builders@hotmail.co.uk" target="_blank">✉️ a.p.t.builders@hotmail.co.uk</a>
+      <a href="mailto:a.p.t.builders@hotmail.co.uk">✉️ a.p.t.builders@hotmail.co.uk</a>
     </span>
   </div>
 </footer>
