fixed footer issue

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
   
 </head>
 
+<body>
+
 
     
 <header>
@@ -199,18 +201,17 @@
               <!-- End of main content -->
 </div> <!-- Close any .container or .page-wrapper -->
 
+    
 <footer class="site-footer">
-  <div class="contact-us-container">
-    <span class="contact-info">
-      <a href="tel:07794083532">📞 Alan - 07794083532</a>
-    </span>
-    <span class="contact-info">
-      <a href="mailto:a.p.t.builders@hotmail.co.uk">✉️ a.p.t.builders@hotmail.co.uk</a>
-    </span>
-  </div>
-</footer>
-
-
+    <div class="contact-us-container">
+      <span class="contact-info">
+        <a href="tel:07794083532">📞 Alan - 07794083532</a>
+      </span>
+      <span class="contact-info">
+        <a href="mailto:a.p.t.builders@hotmail.co.uk">✉️ a.p.t.builders@hotmail.co.uk</a>
+      </span>
+    </div>
+  </footer>
 
 
 
