added in service pages

--- a/index.html
+++ b/index.html
@@ -176,9 +176,9 @@
                         </div>
 
                         <div class="bullet-box">
-                            <img src="images/painting_10722140.png" alt="Icon">
-                            <h5 style="font-size: 18px;">Builds</h5>
-                            <h6 style="font-size: small; font-style: italic; margin-bottom: 5px;">Extensions/Conversions</h6>
+                            <img src="images/house_795561.png" alt="Icon">
+                            <h5 style="font-size: 18px;">Extensions</h5>
+                            <h6 style="font-size: small; font-style: italic; margin-bottom: 5px;">Full Builds/Conversions</h6>
                             <p style="font-size: 11px;">We undertake complete new builds, home extensions, and conversions with precision and care, managing each stage from groundwork to finishing touches. Whether you’re expanding your living space, converting a loft or garage, 
                                 or starting from the ground up, we ensure structural integrity, practical design, and a high-quality finish tailored to your needs.</p>
                             </div>
