--- a/roofing.html
+++ b/roofing.html
@@ -16,7 +16,7 @@
         <img class="header-logo" src="images/aptlogo.png">
         </a>   
     
-        <p class="head-title">A.P.T Builders</p>
+        <p class="head-title">Roofing Services</p>
         <nav class="burger-nav">
             <button class="burger-toggle" onclick="toggleMenu()">☰</button>
             <div class="burger-menu" id="burgerMenu">
@@ -38,8 +38,8 @@
 
       <section class="service-banner">
         <div class="banner-content">
-          <h2>Roofing Services in Kent</h2>
-          <p>Expert roofing solutions tailored to your needs.</p>
+          <h2 class="banner-overlay-services">Roofing Repairs & New Installations</h2>
+          <p class="banner-overlay-services">Expert roofing solutions tailored to your needs in Kent</p>
         </div>
       </section>
       
@@ -77,7 +77,7 @@
       <h3>Why Choose A.P.T Builders?</h3>
       <ul>
         <li>18+ years of experience</li>
-        <li>Fully insured</li>
+        <li>Fully insured and reliable</li>
         <li>Free quotes and honest advice</li>
         <li>Competitive pricing with no hidden costs</li>
       </ul>
@@ -100,69 +100,10 @@
   </footer>
 
   <script>
-    const images = Array.from(document.querySelectorAll(".lightbox-img"));
-    const lightbox = document.getElementById("lightbox");
-    const lightboxImg = document.getElementById("lightbox-img");
-    const closeBtn = document.querySelector(".lightbox-close");
-    const nextBtn = document.querySelector(".lightbox-next");
-    const prevBtn = document.querySelector(".lightbox-prev");
-  
-    let currentIndex = 0;
-  
-    function showImage(index) {
-      const img = images[index];
-      if (img) {
-        lightboxImg.src = img.src;
-        lightboxImg.alt = img.alt;
-        currentIndex = index;
-        lightbox.style.display = "flex";
-      }
+    function toggleMenu() {
+      const menu = document.getElementById("burgerMenu");
+      menu.classList.toggle("show");
     }
-  
-    images.forEach((img, index) => {
-      img.addEventListener("click", () => showImage(index));
-    });
-  
-    nextBtn.addEventListener("click", () => {
-      currentIndex = (currentIndex + 1) % images.length;
-      showImage(currentIndex);
-    });
-  
-    prevBtn.addEventListener("click", () => {
-      currentIndex = (currentIndex - 1 + images.length) % images.length;
-      showImage(currentIndex);
-    });
-  
-    closeBtn.addEventListener("click", () => {
-      lightbox.style.display = "none";
-    });
-  
-    lightbox.addEventListener("click", (e) => {
-      if (e.target === lightbox) {
-        lightbox.style.display = "none";
-      }
-    });
-  
-    // Swipe Support
-    let touchStartX = 0;
-    lightbox.addEventListener("touchstart", (e) => {
-      touchStartX = e.touches[0].clientX;
-    });
-  
-    lightbox.addEventListener("touchend", (e) => {
-      const touchEndX = e.changedTouches[0].clientX;
-      const diffX = touchStartX - touchEndX;
-  
-      if (diffX > 50) {
-        // Swipe left
-        currentIndex = (currentIndex + 1) % images.length;
-        showImage(currentIndex);
-      } else if (diffX < -50) {
-        // Swipe right
-        currentIndex = (currentIndex - 1 + images.length) % images.length;
-        showImage(currentIndex);
-      }
-    });
   </script>
 
 </body>
