service overlays fixed and footers fixed

--- a/bathrooms.html
+++ b/bathrooms.html
@@ -33,9 +33,9 @@
   </section>
 
   <section class="service-banner-bathrooms">
-    <div class="banner-content">
-      <h2 class="banner-overlay-services">Bathroom Installations & Renovations</h2>
-      <p class="banner-overlay-services">Tailored bathroom solutions for homes across Kent.</p>
+    <div class="banner-overlay-services">
+      <h2 class="banner-content">Bathroom Installations & Renovations</h2>
+      <p>Tailored bathroom solutions for homes across Kent.</p>
     </div>
   </section>
 
