--- a/brickwork.html
+++ b/brickwork.html
@@ -33,9 +33,9 @@
   </section>
 
   <section class="service-banner-brickwork">
-    <div class="banner-content">
-      <h2 class="banner-overlay-services">Brickwork & Repointing</h2>
-      <p class="banner-overlay-services">Reliable structural and decorative brickwork across Kent.</p>
+    <div class="banner-overlay-services">
+      <h2 class="banner-content">Brickwork & Repointing</h2>
+      <p>Reliable structural and decorative brickwork across Kent.</p>
     </div>
   </section>
 
