--- a/decorating.html
+++ b/decorating.html
@@ -33,9 +33,9 @@
   </section>
 
   <section class="service-banner-decorating">
-    <div class="banner-content">
-      <h2 class="banner-overlay-services">Painting & Decorating</h2>
-      <p class="banner-overlay-services">Professional finishes inside and out across homes in Kent.</p>
+    <div class="banner-overlay-services">
+      <h2 class= "banner-content">Painting & Decorating</h2>
+      <p>Professional finishes inside and out across homes in Kent.</p>
     </div>
   </section>
 
