--- a/gallery-page1.html
+++ b/gallery-page1.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 
+  <div class="page-wrapper">
  
   <header>
     <div class="header">
@@ -64,6 +65,8 @@
           </span>
         </div>
       </footer>
+
+  </div>
       
       <script>
         function toggleMenu() {
