--- a/gallery-page5.html
+++ b/gallery-page5.html
@@ -8,6 +8,8 @@
 </head>
 <body>
 
+  <div class="page-wrapper">
+
   <header>
     <div class="header">
     <a href="index.html">
@@ -72,6 +74,8 @@
         </span>
       </div>
     </footer>
+
+    </div>
 
       <script>
         function toggleMenu() {
