--- a/gallery-page8.html
+++ b/gallery-page8.html
@@ -8,6 +8,8 @@
 </head>
 <body>
 
+  <div class="page-wrapper">
+
 
   <header>
     <div class="header">
@@ -88,6 +90,8 @@
           </span>
         </div>
       </footer>
+
+  </div>
 
       <script>
         function toggleMenu() {
