--- a/gallery-page9.html
+++ b/gallery-page9.html
@@ -8,6 +8,8 @@
 </head>
 <body>
 
+  <div class="page-wrapper">
+
 
   <header>
     <div class="header">
@@ -64,12 +66,16 @@
         </div>
       </footer>
 
+  </div>
+
       <script>
         function toggleMenu() {
           const menu = document.getElementById("burgerMenu");
           menu.style.display = (menu.style.display === "flex") ? "none" : "flex";
         }
       </script>
+
+
 
 <script>
   const images = Array.from(document.querySelectorAll(".lightbox-img"));
