--- a/gallery.html
+++ b/gallery.html
@@ -8,6 +8,8 @@
 </head>
 <body>
 
+  <div class="page-wrapper">
+
     <header>
         <div class="header">
         <a href="index.html">
@@ -103,6 +105,8 @@
         </span>
       </div>
     </footer>
+
+  </div>
 
     <script>
         function toggleMenu() {
