--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body>
 
-
+    <div class="page-wrapper">
     
 <header>
     <div class="header">
@@ -212,6 +212,8 @@
       </span>
     </div>
   </footer>
+
+    </div>
 
 
 
