--- a/kitchens.html
+++ b/kitchens.html
@@ -33,9 +33,9 @@
   </section>
 
   <section class="service-banner-kitchens">
-    <div class="banner-content">
-      <h2 class="banner-overlay-services">Kitchen Design & Installation</h2>
-      <p class="banner-overlay-services">Modern, functional kitchens fitted across Kent.</p>
+    <div class="banner-overlay-services">
+      <h2 class="banner-content">Kitchen Design & Installation</h2>
+      <p>Modern, functional kitchens fitted across Kent.</p>
     </div>
   </section>
 
