--- a/roofing.html
+++ b/roofing.html
@@ -37,9 +37,9 @@
       </section>
 
       <section class="service-banner">
-        <div class="banner-content">
-          <h2 class="banner-overlay-services">Roofing Repairs & New Installations</h2>
-          <p class="banner-overlay-services">Expert roofing solutions tailored to your needs in Kent</p>
+        <div class="banner-overlay-services">
+          <h2 class="banner-content">Roofing Repairs & New Installations</h2>
+          <p>Expert roofing solutions tailored to your needs in Kent</p>
         </div>
       </section>
       
