--- a/services.html
+++ b/services.html
@@ -35,9 +35,9 @@
       </section>
 
       <section class="service-banner-services">
-        <div class="banner-content">
-          <h2 class="banner-overlay-services">Our Building Services in Kent</h2>
-          <p class="banner-overlay-services">Proudly serving Maidstone,, Canterbury, Ashford, Sevenoaks, Tunbridge Wells and surrounding areas</p>
+        <div class="banner-overlay-services">
+          <h2 class="banner-content">Our Building Services in Kent</h2>
+          <p >Proudly serving Maidstone,, Canterbury, Ashford, Sevenoaks, Tunbridge Wells and surrounding areas</p>
         </div>
       </section>
 
