--- a/blockpaving.html
+++ b/blockpaving.html
@@ -33,9 +33,9 @@
   </section>
 
   <section class="service-banner-blockpaving">
-    <div class="banner-content">
-      <h2 class="banner-overlay-services">Block Paving & Pathways</h2>
-      <p class="banner-overlay-services">Durable, stylish driveways and paving laid across Kent.</p>
+    <div class="banner-overlay-services">
+      <h2 class="banner-content">Block Paving & Pathways</h2>
+      <p>Durable, stylish driveways and paving laid across Kent.</p>
     </div>
   </section>
 
