--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-
+  <div class="page-wrapper">
    
   <header>
     <div class="header">
@@ -73,6 +73,8 @@
         </span>
       </div>
     </footer>
+
+    </div>
         
         
           <script>
