--- a/extensions.html
+++ b/extensions.html
@@ -33,9 +33,9 @@
   </section>
 
   <section class="service-banner-extension">
-    <div class="banner-content">
-      <h2 class="banner-overlay-services">Home Extensions & Conversions</h2>
-      <p class="banner-overlay-services">Expand your space with quality workmanship across Kent.</p>
+    <div class="banner-overlay-services">
+      <h2 class="banner-content">Home Extensions & Conversions</h2>
+      <p>Expand your space with quality workmanship across Kent.</p>
     </div>
   </section>
 
