--- a/gallery-page2.html
+++ b/gallery-page2.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 
+  <div class="page-wrapper">
  
   <header>
     <div class="header">
@@ -72,6 +73,8 @@
           </span>
         </div>
       </footer>
+
+    </div>
 
 
       <script>
