--- a/gallery-page3.html
+++ b/gallery-page3.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-
+  <div class="page-wrapper">
   
   <header>
     <div class="header">
@@ -27,6 +27,7 @@
       </nav>
       
     </div>
+
   </header>
 
 
@@ -63,6 +64,8 @@
           </span>
         </div>
       </footer>
+
+    </div>
 
       <script>
         function toggleMenu() {
