--- a/gallery-page4.html
+++ b/gallery-page4.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-  
+  <div class="page-wrapper">
   <header>
     <div class="header">
     <a href="index.html">
@@ -27,6 +27,8 @@
       </nav>
       
     </div>
+   
+
   </header>
    
     
@@ -63,6 +65,8 @@
           </span>
         </div>
       </footer>
+
+    </div>
 
       <script>
         function toggleMenu() {
