--- a/gallery-page6.html
+++ b/gallery-page6.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
+
+  <div class="page-wrapper">
   <header>
     <div class="header">
     <a href="index.html">
@@ -60,6 +62,8 @@
           </span>
         </div>
       </footer>
+
+  </div>
 
       <script>
         function toggleMenu() {
