--- a/gallery-page7.html
+++ b/gallery-page7.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-
+  <div class="page-wrapper">
   
   <header>
     <div class="header">
@@ -67,6 +67,8 @@
           </span>
         </div>
       </footer>
+
+      </div>
       
       <script>
         function toggleMenu() {
