--- a/landscaping.html
+++ b/landscaping.html
@@ -33,9 +33,9 @@
   </section>
 
   <section class="service-banner-landscaping">
-    <div class="banner-content">
-      <h2 class="banner-overlay-services">Landscaping & Groundworks</h2>
-      <p class="banner-overlay-services">Transforming outdoor spaces across Kent with care and creativity.</p>
+    <div class="banner-overlay-services">
+      <h2 class="banner-content">Landscaping & Groundworks</h2>
+      <p>Transforming outdoor spaces across Kent with care and creativity.</p>
     </div>
   </section>
 
