gallery image boxes sizing changed

--- a/gallery.html
+++ b/gallery.html
@@ -79,7 +79,7 @@
          <!-- Image Box 8 -->
          <a href="gallery-page8.html" class="gallery-box">
           <img src="images/kitchenextention image 1.jpg" alt="Build-image">
-          <div class="overlay">Builds</div>
+          <div class="overlay">Extensions</div>
       
 
         <!-- Image Box 8 -->
