--- a/gallery-page8.html
+++ b/gallery-page8.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gallery - Builds</title>
+    <title>Gallery - Extensions & Conversions</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
@@ -17,7 +17,7 @@
     <img class="header-logo" src="images/aptlogo.png">
     </a>   
 
-    <p class="head-title">Builds</p>
+    <p class="head-title">Extentions & Conversions</p>
     <nav class="burger-nav">
         <button class="burger-toggle" onclick="toggleMenu()">☰</button>
         <div class="burger-menu" id="burgerMenu">
