adjusted mobile response headers and gallery main page

--- a/gallery.html
+++ b/gallery.html
@@ -35,56 +35,56 @@
     <div class="gallery-container">
         <!-- Image Box 1 -->
         <a href="gallery-page1.html" class="gallery-box">
-            <img src="images/roofimage.jpg" alt="roofing-image">
+            <img src="images/roof-banner.png" alt="roofing-image">
             <div class="overlay">Roofing</div>
         </a>
 
         <!-- Image Box 2 -->
         <a href="gallery-page2.html" class="gallery-box">
-            <img src="images/bathroomimage3.jpg" alt="Bathroom-image">
+            <img src="images/bathroom-banner.png" alt="Bathroom-image">
             <div class="overlay">Bathrooms</div>
         </a>
 
         <!-- Image Box 3 -->
         <a href="gallery-page3.html" class="gallery-box">
-            <img src="images/kitchen extension_fitting2.jpg" alt="Kitchen-image">
+            <img src="images/kitchen-banner.png" alt="Kitchen-image">
             <div class="overlay">Kitchens</div>
         </a>
 
         <!-- Image Box 4 -->
         <a href="gallery-page4.html" class="gallery-box">
-            <img src="images/brickworkimage.jpg" alt="Brickwork-image">
+            <img src="images/brickwork-banner.png" alt="Brickwork-image">
             <div class="overlay">Birickwork</div>
         </a>
 
         <!-- Image Box 5 -->
         <a href="gallery-page5.html" class="gallery-box">
-            <img src="images/driveway6.jpeg" alt="Block Paving-image">
+            <img src="images/blockpaving-banner.png" alt="Block Paving-image">
             <div class="overlay">Block Paving</div>
         </a>
 
         <!-- Image Box 6 -->
         <a href="gallery-page6.html" class="gallery-box">
-            <img src="images/Corner planter.jpg" alt="Landscaping-image">
+            <img src="images/landscaping-banner.png" alt="Landscaping-image">
             <div class="overlay">Landscaping</div>
          </a>
 
            <!-- Image Box 7 -->
         <a href="gallery-page7.html" class="gallery-box">
-            <img src="images/PD woodwork full room view.jpg" alt="Painting-&-Decorating-image">
+            <img src="images/decorating-banner.png" alt="Painting-&-Decorating-image">
             <div class="overlay">Painting & Decorating</div>
       
         </a>
 
          <!-- Image Box 8 -->
          <a href="gallery-page8.html" class="gallery-box">
-          <img src="images/kitchenextention image 1.jpg" alt="Build-image">
+          <img src="images/extension-banner.png" alt="Build-image">
           <div class="overlay">Extensions</div>
       
 
         <!-- Image Box 8 -->
         <a href="gallery-page9.html" class="gallery-box">
-            <img src="images/choppingboard.jpg" alt="General-image">
+            <img src="images/services-banner.png" alt="General-image">
             <div class="overlay">General</div>
         </a>
 
