--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <img class="header-logo" src="images/aptlogo.png">
     </a>   
 
-    <p class="head-title">A.P.T Builders</p>
+    <p class="head-title-main">A.P.T Builders</p>
     <nav class="burger-nav">
         <button class="burger-toggle" onclick="toggleMenu()">☰</button>
         <div class="burger-menu" id="burgerMenu">
