--- a/services.html
+++ b/services.html
@@ -117,5 +117,13 @@
     </div>
   </footer>
 
+  <script>
+    function toggleMenu() {
+      const menu = document.getElementById("burgerMenu");
+      menu.style.display = (menu.style.display === "flex") ? "none" : "flex";
+    }
+  </script>
+  
+
 </body>
 </html>
