linked front services pages and gallery image sizes adjustes for mobile

--- a/gallery.html
+++ b/gallery.html
@@ -16,7 +16,7 @@
         <img class="header-logo" src="images/aptlogo.png">
         </a>   
     
-        <p class="head-title">Gallery</p>
+        <p class="head-title-main">Gallery</p>
         <nav class="burger-nav">
             <button class="burger-toggle" onclick="toggleMenu()">☰</button>
             <div class="burger-menu" id="burgerMenu">
