--- a/roofing.html
+++ b/roofing.html
@@ -102,9 +102,9 @@
   <script>
     function toggleMenu() {
       const menu = document.getElementById("burgerMenu");
-      menu.classList.toggle("show");
+      menu.style.display = (menu.style.display === "flex") ? "none" : "flex";
     }
   </script>
-
+  
 </body>
 </html>
