--- a/landscaping.html
+++ b/landscaping.html
@@ -94,9 +94,10 @@
   <script>
     function toggleMenu() {
       const menu = document.getElementById("burgerMenu");
-      menu.classList.toggle("show");
+      menu.style.display = (menu.style.display === "flex") ? "none" : "flex";
     }
   </script>
+  
 
 </body>
 </html>
