--- a/services.html
+++ b/services.html
@@ -14,7 +14,7 @@
         <img class="header-logo" src="images/aptlogo.png">
         </a>   
     
-        <p class="head-title"> Our Services</p>
+        <p class="head-title-main"> Our Services</p>
         <nav class="burger-nav">
             <button class="burger-toggle" onclick="toggleMenu()">☰</button>
             <div class="burger-menu" id="burgerMenu">
