--- a/decorating.html
+++ b/decorating.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Painting & Decorating in Kent | A.P.T Builders</title>
   <link rel="stylesheet" href="styles/style.css" />
+  <link rel="preload" as="image" href="images/decorating-banner.png" importance="high">
+
 </head>
 <body>
 
@@ -24,13 +26,14 @@
         </div>
       </nav>
     </div>
-  </header>
-
+    
   <section class="gallery-button-section">
     <a class="gallery-ref-link" href="services.html">
       <button class="back-to-gallery-button">Back to Services</button>
     </a>
   </section>
+  </header>
+
 
   <section class="service-banner-decorating">
     <div class="banner-overlay-services">
