--- a/services.html
+++ b/services.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Our Services | A.P.T Builders in Kent</title>
   <link rel="stylesheet" href="styles/style.css" />
+  <link rel="preload" as="image" href="images/services-banner.png" importance="high">
+
 </head>
 <body>
 
@@ -26,14 +28,15 @@
           </nav>
           
         </div>
+        <section class="gallery-button-section">
+          <a class="gallery-ref-link" href="index.html">
+            <button class="back-to-gallery-button">Back Home</button>
+          </a>
+        </section>
+  
       </header>
 
-      <section class="gallery-button-section">
-        <a class="gallery-ref-link" href="index.html">
-          <button class="back-to-gallery-button">Back Home</button>
-        </a>
-      </section>
-
+      
       <section class="service-banner-services">
         <div class="banner-overlay-services">
           <h2 class="banner-content">Our Building Services in Kent</h2>
