--- a/kitchens.html
+++ b/kitchens.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Kitchen Services in Kent | A.P.T Builders</title>
   <link rel="stylesheet" href="styles/style.css" />
+  <link rel="preload" as="image" href="images/kitchen-banner.png" importance="high">
+
 </head>
 <body>
 
@@ -24,13 +26,15 @@
         </div>
       </nav>
     </div>
+    
+    <section class="gallery-button-section">
+      <a class="gallery-ref-link" href="services.html">
+        <button class="back-to-gallery-button">Back to Services</button>
+      </a>
+    </section>
   </header>
 
-  <section class="gallery-button-section">
-    <a class="gallery-ref-link" href="services.html">
-      <button class="back-to-gallery-button">Back to Services</button>
-    </a>
-  </section>
+ 
 
   <section class="service-banner-kitchens">
     <div class="banner-overlay-services">
