--- a/roofing.html
+++ b/roofing.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Roofing Services in Kent | A.P.T Builders</title>
   <link rel="stylesheet" href="styles/style.css" />
+  <link rel="preload" as="image" href="images/roof-banner.png" importance="high">
+
 </head>
 <body>
 
@@ -28,13 +30,14 @@
           </nav>
           
         </div>
+        <section class="gallery-button-section">
+          <a class="gallery-ref-link" href="services.html">
+            <button class="back-to-gallery-button">Back to Services</button>
+          </a>
+        </section>
       </header>
 
-      <section class="gallery-button-section">
-        <a class="gallery-ref-link" href="services.html">
-          <button class="back-to-gallery-button">Back to Services</button>
-        </a>
-      </section>
+      
 
       <section class="service-banner">
         <div class="banner-overlay-services">
