service texts edited and over for main services added

--- a/blockpaving.html
+++ b/blockpaving.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="styles/style.css" />
   <link rel="preload" as="image" href="images/blockpaving-banner.png" importance="high">
 
+
 </head>
 <body>
 
@@ -15,7 +16,7 @@
       <a href="index.html">
         <img class="header-logo" src="images/aptlogo.png" alt="APT Logo">
       </a>   
-      <p class="head-title">Block Paving & Driveways</p>
+      <p class="head-title">Block Paving & Driveways Services</p>
       <nav class="burger-nav">
         <button class="burger-toggle" onclick="toggleMenu()">☰</button>
         <div class="burger-menu" id="burgerMenu">
@@ -52,7 +53,8 @@
     <section class="service-content">
       <h3>Custom Driveways & Garden Paths</h3>
       <p>
-        At A.P.T Builders, we specialise in high-quality block paving and surfacing for homes and commercial properties. Our team ensures every surface is well-prepared, properly drained, and professionally finished to enhance your property's kerb appeal.
+        At A.P.T Builders, we specialise in high quality block paving and surfacing for homes and commercial properties. 
+        Our team ensures every surface is well prepared, properly drained, and professionally finished to enhance your property's kerb appeal.
       </p>
 
       <h3 class="included-services">Our Paving & Surfacing Services Include:</h3>
@@ -66,7 +68,7 @@
 
       <h3 class="service-locations">Serving All of Kent</h3>
       <p>
-        We cover Maidstone, Canterbury, Ashford, Tunbridge Wells, Sevenoaks and surrounding areas — creating outdoor spaces that last.
+        We cover Maidstone, Canterbury, Ashford, Tunbridge Wells, Sevenoaks and surrounding areas, creating outdoor spaces that last.
       </p>
 
       <h3>Why Choose A.P.T Builders?</h3>
