--- a/brickwork.html
+++ b/brickwork.html
@@ -51,7 +51,8 @@
     <section class="service-content">
       <h3>High Quality Brickwork Services</h3>
       <p>
-        A.P.T Builders provides expert bricklaying and repointing services for both new builds and restorations. Whether you’re constructing a garden wall, extending a property, or refreshing tired mortar joints, we deliver clean, strong, and long-lasting results.
+        A.P.T Builders provides expert bricklaying and repointing services for both new builds and restorations. 
+        Whether you’re constructing a garden wall, extending a property, or refreshing tired mortar joints, we deliver clean, strong, and long lasting results.
       </p>
 
       <h3 class="included-services">Our Brickwork Services Include:</h3>
@@ -65,7 +66,7 @@
 
       <h3 class="service-locations">Serving All of Kent</h3>
       <p>
-        We work across Maidstone, Ashford, Canterbury, Tunbridge Wells, Sevenoaks and all surrounding Kent areas — delivering dependable brickwork built to last.
+        We work across Maidstone, Ashford, Canterbury, Tunbridge Wells, Sevenoaks and all surrounding Kent areas, delivering dependable brickwork built to last.
       </p>
 
       <h3>Why Choose A.P.T Builders?</h3>
