--- a/decorating.html
+++ b/decorating.html
@@ -15,7 +15,7 @@
       <a href="index.html">
         <img class="header-logo" src="images/aptlogo.png" alt="APT Logo">
       </a>   
-      <p class="head-title">Painting & Decorating</p>
+      <p class="head-title">Decorative Services</p>
       <nav class="burger-nav">
         <button class="burger-toggle" onclick="toggleMenu()">☰</button>
         <div class="burger-menu" id="burgerMenu">
@@ -49,9 +49,11 @@
     </section>
 
     <section class="service-content">
-      <h3>Clean, Tidy & Detail-Driven Decorating</h3>
+      <h3>Clean, Tidy & Detail Driven Decorating</h3>
       <p>
-        At A.P.T Builders, we deliver flawless painting and decorating work with a focus on durability, attention to detail, and a tidy finish. Whether you’re looking to refresh a single room, a full property, or the exterior of your home, we’ll help you bring your vision to life.
+        At A.P.T Builders, we deliver flawless painting and decorating work with a focus on durability, attention to detail, 
+        and a tidy finish. Whether you’re looking to refresh a single room, a full property, or the exterior of your home, 
+        we’ll help you bring your vision to life.
       </p>
 
       <h3 class="included-services">Our Painting & Decorating Services Include:</h3>
@@ -60,13 +62,13 @@
         <li>Woodwork painting: skirting, doors, banisters</li>
         <li>Wallpapering and feature walls</li>
         <li>Tiling, carpet fitting and flooring</li>
-        <li>Exterior painting with weather-resistant finishes</li>
+        <li>Exterior painting with weather resistant finishes</li>
         <li>Preparation: filling, sanding, and priming</li>
       </ul>
 
       <h3 class="service-locations">Covering All of Kent</h3>
       <p>
-        From Maidstone to Ashford, Tunbridge Wells to Canterbury — we offer expert painting & decorating throughout the Kent region.
+        From Maidstone to Ashford, Tunbridge Wells to Canterbury, we offer expert painting & decorating throughout the Kent region.
       </p>
 
       <h3>Why Choose A.P.T Builders?</h3>
