--- a/extensions.html
+++ b/extensions.html
@@ -15,7 +15,7 @@
       <a href="index.html">
         <img class="header-logo" src="images/aptlogo.png" alt="APT Logo">
       </a>   
-      <p class="head-title">Extensions & Conversions</p>
+      <p class="head-title">Extensions & Conversions Services</p>
       <nav class="burger-nav">
         <button class="burger-toggle" onclick="toggleMenu()">☰</button>
         <div class="burger-menu" id="burgerMenu">
@@ -51,13 +51,15 @@
     <section class="service-content">
       <h3>Extend & Transform Your Property</h3>
       <p>
-        Whether you’re looking to add extra living space, convert a garage or outbuilding, or build an entirely new structure, A.P.T Builders can help bring your ideas to life.
-        We manage every stage, from groundwork to finishing touches, ensuring your extension is safe, functional, and beautifully finished.
+        Whether you’re looking to add extra living space, convert a garage or outbuilding, or build an entirely new structure, 
+        A.P.T Builders can help bring your ideas to life.
+        We manage every stage, from groundwork to finishing touches, 
+        ensuring your extension is safe, functional, and beautifully finished.
       </p>
 
       <h3 class="included-services">Our Extension & Conversion Services Include:</h3>
       <ul>
-        <li>Single & double-storey home extensions</li>
+        <li>Single & double storey home extensions</li>
         <li>Garage & loft conversions</li>
         <li>Outbuildings, garden rooms, and annexes</li>
         <li>Planning & structural work</li>
@@ -66,7 +68,7 @@
 
       <h3 class="service-locations">Serving All of Kent</h3>
       <p>
-        We work across Kent including Maidstone, Ashford, Canterbury, Tunbridge Wells and surrounding areas — offering smart space solutions tailored to your home.
+        We work across Kent including Maidstone, Ashford, Canterbury, Tunbridge Wells and surrounding areas, offering smart space solutions tailored to your home.
       </p>
 
       <h3>Why Choose A.P.T Builders?</h3>
