--- a/landscaping.html
+++ b/landscaping.html
@@ -15,7 +15,7 @@
       <a href="index.html">
         <img class="header-logo" src="images/aptlogo.png" alt="APT Logo">
       </a>   
-      <p class="head-title">Landscaping & Groundworks</p>
+      <p class="head-title">Landscaping Services</p>
       <nav class="burger-nav">
         <button class="burger-toggle" onclick="toggleMenu()">☰</button>
         <div class="burger-menu" id="burgerMenu">
@@ -51,7 +51,8 @@
     <section class="service-content">
       <h3>Enhance Your Outdoor Space</h3>
       <p>
-        A.P.T Builders offers complete landscaping services for residential and commercial clients. From hard landscaping like patios and pathways to soft features like turfing and planting, we help shape functional and beautiful outdoor environments.
+        A.P.T Builders offers complete landscaping services for residential and commercial clients. 
+        From hard landscaping like patios and pathways to soft features like turfing and planting, we help shape functional and beautiful outdoor environments.
       </p>
 
       <h3 class="included-services">Our Landscaping Services Include:</h3>
@@ -65,15 +66,15 @@
 
       <h3 class="service-locations">Serving All of Kent</h3>
       <p>
-        Based in Kent, we operate across Maidstone, Canterbury, Ashford, Tunbridge Wells, and nearby towns — providing outdoor spaces that are both practical and attractive.
+        Based in Kent, we operate across Maidstone, Canterbury, Ashford, Tunbridge Wells, and nearby towns, providing outdoor spaces that are both practical and attractive.
       </p>
 
       <h3>Why Choose A.P.T Builders?</h3>
       <ul>
-        <li>18+ years of hands-on experience</li>
+        <li>18+ years of hands on experience</li>
         <li>Friendly, professional, and fully insured</li>
         <li>Tailored garden designs to suit your needs</li>
-        <li>Free on-site quotes and advice</li>
+        <li>Free on site quotes and advice</li>
       </ul>
     </section>
 
