--- a/roofing.html
+++ b/roofing.html
@@ -58,7 +58,8 @@
     <section class="service-content">
       <h3>Expert Roofing for Homes and Businesses</h3>
       <p>
-        At A.P.T Builders, we provide professional roofing services throughout Kent. Whether it’s a small leak, damaged tiles, or a complete new roof installation, we are experienced and fully equipped to handle it.
+        At A.P.T Builders, we provide professional roofing services throughout Kent. 
+        Whether it’s a small leak, damaged tiles, or a complete new roof installation, we are experienced and fully equipped to handle it.
       </p>
 
       <h3 class="included-services">Our Roofing Services Include:</h3>
@@ -74,7 +75,7 @@
 
       <h3 class="service-locations">Serving All of Kent</h3>
       <p>
-        We proudly serve Maidstone, Canterbury, Ashford, Sevenoaks, Tunbridge Wells and the wider Kent area — providing dependable roofing services tailored to your property.
+        We proudly serve Maidstone, Canterbury, Ashford, Sevenoaks, Tunbridge Wells and the wider Kent area, providing dependable roofing services tailored to your property.
       </p>
 
       <h3>Why Choose A.P.T Builders?</h3>
