--- a/services.html
+++ b/services.html
@@ -40,7 +40,7 @@
       <section class="service-banner-services">
         <div class="banner-overlay-services">
           <h2 class="banner-content">Our Building Services in Kent</h2>
-          <p >Proudly serving Maidstone,, Canterbury, Ashford, Sevenoaks, Tunbridge Wells and surrounding areas</p>
+          <p >Proudly serving Maidstone, Canterbury, Ashford, Sevenoaks, Tunbridge Wells and surrounding areas</p>
         </div>
       </section>
 
