--- a/bathrooms.html
+++ b/bathrooms.html
@@ -66,7 +66,7 @@
 
       <h3 class="service-locations">Serving All of Kent</h3>
       <p>
-        We proudly serve Maidstone, Canterbury, Ashford, Sevenoaks, Tunbridge Wells and the wider Kent area — transforming bathrooms with care and precision.
+        We proudly serve Maidstone, Canterbury, Ashford, Sevenoaks, Tunbridge Wells and the wider Kent area, transforming bathrooms with care and precision.
       </p>
 
       <h3>Why Choose A.P.T Builders?</h3>
