--- a/kitchens.html
+++ b/kitchens.html
@@ -53,7 +53,7 @@
       <h3>Beautiful & Practical Kitchens</h3>
       <p>
         A.P.T Builders specialises in full kitchen renovations and partial upgrades, tailored to your space and lifestyle. 
-        Whether you want a sleek modern finish or a practical family-friendly layout, we help bring your kitchen vision to life.
+        Whether you want a sleek modern finish or a practical family friendly layout, we help bring your kitchen vision to life.
       </p>
 
       <h3 class="included-services">Our Kitchen Services Include:</h3>
@@ -67,7 +67,7 @@
 
       <h3 class="service-locations">Serving All of Kent</h3>
       <p>
-        We carry out kitchen services across Maidstone, Canterbury, Ashford, Tunbridge Wells, and the wider Kent region — delivering quality and detail every time.
+        We carry out kitchen services across Maidstone, Canterbury, Ashford, Tunbridge Wells, and the wider Kent region, delivering quality and detail every time.
       </p>
 
       <h3>Why Choose A.P.T Builders?</h3>
@@ -75,7 +75,7 @@
         <li>18+ years of experience</li>
         <li>Fully insured & reliable</li>
         <li>Free quotes & tailored advice</li>
-        <li>High-quality finishes at fair prices</li>
+        <li>High quality finishes at fair prices</li>
       </ul>
     </section>
 
