--- a/gallery-page5.html
+++ b/gallery-page5.html
@@ -44,6 +44,12 @@
       <img src="images/driveway7.jpeg" alt="Driveway Image 5" class="lightbox-img">
       <img src="images/driveway6.jpeg" alt="Driveway Image 6" class="lightbox-img">
       <img src="images/driveway8.jpeg" alt="Driveway Image 7" class="lightbox-img">
+      <img src="images/curveddriveway.jpg" alt="Image 8" class="lightbox-img">
+      <img src="images/curveddriveway2.jpg" alt="Image 9" class="lightbox-img">
+      <img src="images/curveddriveway3.jpg" alt="Image 10" class="lightbox-img">
+
+
+
     </div>
     
     <!-- Lightbox Overlay -->
