--- a/gallery-page9.html
+++ b/gallery-page9.html
@@ -46,6 +46,7 @@
   
   <div class="gallery lightbox-gallery">
     <img src="images/choppingboard.jpg" alt="Image 1" class="lightbox-img">
+    <img src="images/bespokecupboards.jpg" alt="Image 2" class="lightbox-img">
     
   </div>
   
