--- a/gallery-page7.html
+++ b/gallery-page7.html
@@ -46,6 +46,13 @@
     <img src="images/PD toilet.jpg" alt="image 6" class="lightbox-img">
     <img src="images/PDtiles.jpg" alt="image 7" class="lightbox-img">
     <img src="images/PDdoors.jpg" alt="image 8" class="lightbox-img">
+    <img src="images/hardflooring.jpg" alt="Image 9" class="lightbox-img">
+    <img src="images/hardflooring2.jpg" alt="Image 10" class="lightbox-img">
+    <img src="images/whitedecor.jpg" alt="Image 11" class="lightbox-img">
+    <img src="images/pattern-tile.jpg" alt="Image 12" class="lightbox-img">
+    <img src="images/pattern-tile2.jpg" alt="Image 13" class="lightbox-img">
+    <img src="images/pattern-tile3.jpg" alt="Image 14" class="lightbox-img">
+    <img src="images/paintedroom.jpg" alt="Image 15" class="lightbox-img">
     
   </div>
   
