updated text and fixed

--- a/index.html
+++ b/index.html
@@ -151,7 +151,8 @@
                     <img src="images/kitchen_2852011.png" alt="Icon">
                     <h5 style="font-size: 18px;">Kitchens</h5>
                     <h6 style="font-size: small; font-style: italic;margin-bottom: 5px;">Replaments/Alterations</h6>
-                    <p style="font-size: 11px;">From complete bathroom replacements to minor alterations, we handle everything from upgrading fixtures and retiling to 
+                    <p style="font-size: 11px;">From complete bathroom replacements to minor alterations, we handle everything from upgrading 
+                        fixtures and retiling to 
                         optimizing layouts and improving functionality, ensuring a fresh and contemporary space that suits your lifestyle.</p>
                 </div>
             </a>
@@ -176,7 +177,7 @@
                     <h6 style="font-size: small; font-style: italic; margin-bottom: 5px;">Driveways/Pathways</h6>
                     <p style="font-size: 11px">With expertly laid block paving, driveways, and pathways, 
                         offering a range of designs and materials to create durable, 
-                        weather-resistant, and visually appealing surfaces tailored to your home or business.</p>
+                        weather resistant, and visually appealing surfaces tailored to your home or business.</p>
                 </div>
             </a>
 
@@ -199,7 +200,7 @@
                         <h6 style="font-size: small; font-style: italic; margin-bottom: 5px;">Interior/Exterior</h6>
                         <p style="font-size: 11px;">We provide high quality painting and decorating services for both interior and exterior spaces. 
                             From refreshing walls and ceilings to carefully finishing woodwork such as doors, skirtings, and window frames, we ensure a clean, 
-                            professional finish throughout. Our exterior work also includes durable, weather-resistant coatings to protect and enhance your property.</p>
+                            professional finish throughout. Our exterior work also includes durable, weather resistant coatings to protect and enhance your property.</p>
                         </div>
                     </a>
 
@@ -209,7 +210,7 @@
                             <h5 style="font-size: 18px;">Extensions</h5>
                             <h6 style="font-size: small; font-style: italic; margin-bottom: 5px;">Full Builds/Conversions</h6>
                             <p style="font-size: 11px;">We undertake complete new builds, home extensions, and conversions with precision and care, managing each stage from groundwork to finishing touches. Whether you’re expanding your living space, converting a loft or garage, 
-                                or starting from the ground up, we ensure structural integrity, practical design, and a high-quality finish tailored to your needs.</p>
+                                or starting from the ground up, we ensure structural integrity, practical design, and a high quality finish tailored to your needs.</p>
                             </div>
                         </a>
     
