--- a/gallery-page5.html
+++ b/gallery-page5.html
@@ -47,6 +47,12 @@
       <img src="images/curveddriveway.jpg" alt="Image 8" class="lightbox-img">
       <img src="images/curveddriveway2.jpg" alt="Image 9" class="lightbox-img">
       <img src="images/curveddriveway3.jpg" alt="Image 10" class="lightbox-img">
+      <img src="images/gardenblockpaving.jpg" alt="Image 11" class="lightbox-img">
+      <img src="images/gardenblockpaving2.jpg" alt="Image 12" class="lightbox-img">
+      <img src="images/gardenblockpaving3.jpg" alt="Image 13" class="lightbox-img">
+      <img src="images/gardenblockpaving4.jpg" alt="Image 14" class="lightbox-img">
+      <img src="images/gardenblockpaving5.jpg" alt="Image 15" class="lightbox-img">
+      <img src="images/gardenblockpaving6.jpg" alt="Image 16" class="lightbox-img">
 
 
 
