--- a/gallery-page6.html
+++ b/gallery-page6.html
@@ -46,6 +46,27 @@
       <img src="images/trench.jpg" alt="Image 3" class="lightbox-img">
       <img src="images/fencing.jpg" alt="Image 4" class="lightbox-img">
       <img src="images/decking.jpg" alt="Image 5" class="lightbox-img">
+      <img src="images/turf.jpg" alt="Image 6" class="lightbox-img">
+      <img src="images/turf2.jpg" alt="Image 7" class="lightbox-img">
+      <img src="images/turf3.jpg" alt="Image 8" class="lightbox-img">
+      <img src="images/ditch.jpg" alt="Image 9" class="lightbox-img">
+      <img src="images/ditch2.jpg" alt="Image 10" class="lightbox-img">
+      <img src="images/ditch3.jpg" alt="Image 11" class="lightbox-img">
+      <img src="images/turf4.jpg" alt="Image 12" class="lightbox-img">
+      <img src="images/turf5.jpg" alt="Image 13" class="lightbox-img">
+      <img src="images/turf6.jpg" alt="Image 14" class="lightbox-img">
+      <img src="images/border.jpg" alt="Image 15" class="lightbox-img">
+      <img src="images/border2.jpg" alt="Image 16" class="lightbox-img">
+      <img src="images/border3.jpg" alt="Image 17" class="lightbox-img">
+      <img src="images/turf7.jpg" alt="Image 18" class="lightbox-img">
+      <img src="images/turf8.jpg" alt="Image 19" class="lightbox-img">
+      <img src="images/turf9.jpg" alt="Image 20" class="lightbox-img">
+      <img src="images/hedges.jpg" alt="Image 21" class="lightbox-img">
+      <img src="images/gate.jpg" alt="Image 22" class="lightbox-img">
+      <img src="images/fencing2.jpg" alt="Image 23" class="lightbox-img">
+      <img src="images/fencing3.jpg" alt="Image 24" class="lightbox-img">
+      <img src="images/gate2.jpg" alt="Image 25" class="lightbox-img">
+
     
     </div>
     
