--- a/gallery-page7.html
+++ b/gallery-page7.html
@@ -53,6 +53,45 @@
     <img src="images/pattern-tile2.jpg" alt="Image 13" class="lightbox-img">
     <img src="images/pattern-tile3.jpg" alt="Image 14" class="lightbox-img">
     <img src="images/paintedroom.jpg" alt="Image 15" class="lightbox-img">
+    <img src="images/toilet-tiles.jpg" alt="Image 16" class="lightbox-img">
+    <img src="images/toilet-tiles2.jpg" alt="Image 17" class="lightbox-img">
+    <img src="images/magnoliawall.jpg" alt="Image 18" class="lightbox-img">
+    <img src="images/magnoliawall2.jpg" alt="Image 19" class="lightbox-img">
+    <img src="images/magnoliawall3.jpg" alt="Image 20" class="lightbox-img">
+    <img src="images/declinepaintwall.jpg" alt="Image 21" class="lightbox-img">
+    <img src="images/declinepaintwall2.jpg" alt="Image 22" class="lightbox-img">
+    <img src="images/declinepaintwall3.jpg" alt="Image 23" class="lightbox-img">
+    <img src="images/walkinwardrobe.jpg" alt="Image 24" class="lightbox-img">
+    <img src="images/mural.jpg" alt="Image 25" class="lightbox-img">
+    <img src="images/twotonetileshower.jpg" alt="Image 26" class="lightbox-img">
+    <img src="images/redtileshower.jpg" alt="Image 27" class="lightbox-img">
+    <img src="images/redtileshower2.jpg" alt="Image 27a" class="lightbox-img">
+    <img src="images/darktilebathroom.jpg" alt="Image 28" class="lightbox-img">
+    <img src="images/greytilewall.jpg" alt="Image 29" class="lightbox-img">
+    <img src="images/legobed.jpg" alt="Image 30" class="lightbox-img">
+    <img src="images/legobed2.jpg" alt="Image 31" class="lightbox-img">
+    <img src="images/cupboard.jpg" alt="Image 32" class="lightbox-img">
+    <img src="images/cupboard2.jpg" alt="Image 33" class="lightbox-img">
+    <img src="images/cupboard3.jpg" alt="Image 34" class="lightbox-img">
+    <img src="images/cupboard4.jpg" alt="Image 35" class="lightbox-img">
+    <img src="images/cupboard5.jpg" alt="Image 36" class="lightbox-img">
+    <img src="images/cupboard6.jpg" alt="Image 37" class="lightbox-img">
+    <img src="images/sink-area.jpg" alt="Image 38" class="lightbox-img">
+    <img src="images/cupboard7.jpg" alt="Image 39" class="lightbox-img">
+    <img src="images/fittedcupboard.jpg" alt="Image 40" class="lightbox-img">
+    <img src="images/fittingcupboard2.jpg" alt="Image 41" class="lightbox-img">
+    <img src="images/ceiling.jpg" alt="Image 41" class="lightbox-img">
+    <img src="images/ceiling2.jpg" alt="Image 42" class="lightbox-img">
+    <img src="images/ceiling3.jpg" alt="Image 43" class="lightbox-img">
+    <img src="images/wallbeam.jpg" alt="Image 44" class="lightbox-img">
+    <img src="images/beams.jpg" alt="Image 45" class="lightbox-img">
+    <img src="images/beams2.jpg" alt="Image 46" class="lightbox-img">
+    <img src="images/wallbeam2.jpg" alt="Image 47" class="lightbox-img">
+
+
+
+    
+
     
   </div>
   
